Fix jump on desktop

--- a/less/gmcq.less
+++ b/less/gmcq.less
@@ -108,7 +108,7 @@
         }
     }
     .gmcq-item input {
-        position: absolute;
+        position: fixed;
         top: 25px;
         left: 25px;
         .dir-rtl & {
